--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.menu-btn{
+/*.menu-btn{
     display: flex;
     align-items: center;
     position: fixed;
@@ -17,7 +17,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #616161;
+    background-color: #9c9a9a;
     transition-duration: .25s;
   }
   .menu-btn > span::before {
@@ -74,95 +74,181 @@
     visibility: visible;
     left: 0;
   }
+*/
+html {
+  font-family: 'Inconsolata', monospace;
+  font-weight: 400;
+}
 
 body {
-    background-color: rgb(255, 255, 255);
+  max-width: 1280px;
+  margin: 0 auto;
+  background-color: rgb(0, 0, 0);
 }
-#container {
-    width: 1000px; /* Ширина макета */
-    margin: 0 auto; /* Выравнивание по центру */
-    background-color: rgba(255, 214, 214, 0.158);
-   }
-   #nav {
-    width: 300px; /* Ширина левой колонки */
-    float: left;
-   }
-   #aside {
-    width: 300px; /* Ширина правой колонки */
-    float: right;
-   }
-   #content {
-    margin: 0 100px 0 100px; /* Отступ на ширину левой и правой колонки*/
-   }
-   .photo {
-       border-radius: 50% 50% 50% 50%;
-       margin: 100px 200px 0 100px;
-   }
-   h1 {
-       font-size: 60px;
-       margin: 0 0 0 300px;
-   }
-   .position {
-       font-size: 40px;
-       margin: 0 0 0 500px;
-   }
-   .contacts {
-       font-size: 20px;
-       padding: 0 100px;
-   }
-   .about-me {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .skills {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .code-example {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   pre {
-       font: 1em sans-serif rgb(0, 0, 0);
-       background-color: rgba(194, 188, 188, 0.699);
-   }
-   .education {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .english {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .footer {
-    grid-area: footer;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #918f8f59;
-  }
-  .ref {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-  }
-  .footer_year {
-      font-size: medium;
-      color: black;
-  }
-   .rsschool-logo {
-    width: 100px;
-    height: 100px;
-  }
+
+nav {
+  margin: 0 auto;
+}
+
+.menu ul {
+  padding-left: 100px;
+}
+
+.menu li {
+  list-style: none;
+  display: inline;
+  justify-content: space-around;
+  align-content: center;
+  margin: 0 auto;
+  padding-left: 20px;
+  font-size: 24px;
+}
+
+.menu a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  padding: 20px;
+}
+
+header {
+  width: 1280px;
+  height: 600px;
+  display: inline-flexbox;
+  background-image: url('/img/cv-photo.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: right;
+}
+
+h1 {
+  width: 100vw;
+  color: rgb(255, 255, 255);
+  font-size: 60px;
+  margin: 0 auto;
+  padding-top: 150px;
+  padding-left: 100px;
+}
+
+.position {
+  height: 400px;
+  color: #fff;
+  font-size: 40px;
+  padding-left: 200px;
+}
+
+.main p{
+  color: #fff;
+  font-size: 24px;
+  padding: 100px 200px;
+  line-height: 50px;
+}
+
+.main div {
+  height: 400px;
+}
+
+.skills {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+}
+
+.code-example {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+}
+
+pre {
+  font: 1em sans-serif rgb(255, 255, 255);
+  background-color: rgba(34, 34, 34, 0.774);
+  width: 1100px;
+}
+
+.projects {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+}
+
+.projects div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 20px 20px;
+}
+
+.projects img {
   
-  .github-text {
-    margin-right: 1rem;
-    font-size: 1rem;
-    color: rgb(0, 0, 0);
-  }
-  .github-logo {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-  }
+    height: 300px;
+    width: 300px;
+}
+
+.projects a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.education {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+  line-height: 50px;
+}
+
+.languages {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+}
+
+.languages p {
+  padding-left: 50px;
+}
+   
+.contacts {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+  line-height: 50px;
+}
+
+.footer {
+  grid-area: footer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #00000059;
+}
+
+.ref {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.footer_year {
+  font-size: medium;
+  color: rgb(255, 255, 255);
+}
+
+.rsschool-logo {
+  width: 100px;
+  height: 100px;
+  filter: invert(1);
+}
+
+.footer_logo a {
+  display: inline-block;
+  text-decoration: none;
+  justify-content: space-around;
+  padding: 5px;
+} 
+
+.discord img,
+.telegram img,
+.github img {
+  width: 32px;
+  filter: invert(1);
+}
