--- a/css/style.css
+++ b/css/style.css
@@ -1,162 +1,9 @@
-.menu-btn{
-    display: flex;
-    align-items: center;
-    position: fixed;
-    top: 1px;
-    left: 0;;
-    width: 26px;
-    height: 26px;
-    cursor: pointer;
-    z-index: 1;
-  }
-
-  .menu-btn > span,
-  .menu-btn > span::before,
-  .menu-btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #616161;
-    transition-duration: .25s;
-  }
-  .menu-btn > span::before {
-    content: '';
-    top: -8px;
-  }
-  .menu-btn > span::after {
-    content: '';
-    top: 8px;
-  }
-  .menubox{
-    display: block;
-    position: fixed;
-    visibility: hidden;
-    top: 0;
-    left: -100%;
-    width: 300px;
-    height: 100%;
-    margin: 0;
-    padding: 80px 0;
-    list-style: none;
-    background-color: #ECEFF1;
-    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-    transition-duration: .25s;
-  }
-  .menu-item {
-    display: block;
-    padding: 12px 24px;
-    color: #333;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    text-decoration: none;
-    transition-duration: .25s;
-  }
-  .menu-item:hover {
-    background-color: #CFD8DC;
-  }
-  #menu-toggle{
-    opacity: 0;
-  }
-  #menu-toggle:checked ~ .menu-btn > span{
-    transform: rotate(45deg);
-  }
-  #menu-toggle:checked ~ .menu-btn > span::before{
-    top: 0;
-    transform: rotate(0);
-  }
-  #menu-toggle:checked ~ .menu-btn > span::after{
-    top: 0;
-    transform: rotate(90deg);
-  }
-  #menu-toggle:checked ~ .menubox{
-    visibility: visible;
-    left: 0;
-  }
+html {
+  font-family: 'Inconsolata', monospace;
+  font-weight: 400;
+}
 
 body {
-<<<<<<< HEAD
-    background-color: rgb(255, 255, 255);
-}
-#container {
-    width: 1000px; /* Ширина макета */
-    margin: 0 auto; /* Выравнивание по центру */
-    background-color: rgba(255, 214, 214, 0.158);
-   }
-   #nav {
-    width: 300px; /* Ширина левой колонки */
-    float: left;
-   }
-   #aside {
-    width: 300px; /* Ширина правой колонки */
-    float: right;
-   }
-   #content {
-    margin: 0 100px 0 100px; /* Отступ на ширину левой и правой колонки*/
-   }
-   .photo {
-       border-radius: 50% 50% 50% 50%;
-       margin: 100px 200px 0 100px;
-   }
-   h1 {
-       font-size: 60px;
-       margin: 0 0 0 300px;
-   }
-   .position {
-       font-size: 40px;
-       margin: 0 0 0 500px;
-   }
-   .contacts {
-       font-size: 20px;
-       padding: 0 100px;
-   }
-   .about-me {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .skills {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .code-example {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   pre {
-       font: 1em sans-serif rgb(0, 0, 0);
-       background-color: rgba(194, 188, 188, 0.699);
-   }
-   .education {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .english {
-    font-size: 20px;
-    padding: 0 100px;
-   }
-   .footer {
-    grid-area: footer;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #918f8f59;
-  }
-  .ref {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-  }
-  .footer_year {
-      font-size: medium;
-      color: black;
-  }
-   .rsschool-logo {
-    width: 100px;
-    height: 100px;
-  }
-
   max-width: 1280px;
   margin: 0 auto;
   background-color: rgb(0, 0, 0);
@@ -208,7 +55,7 @@ h1 {
 .position {
   height: 400px;
   color: #fff;
-  font-size: 40px;
+  font-size: 34px;
   padding-left: 200px;
 }
 
@@ -255,15 +102,75 @@ pre {
 }
 
 .projects img {
->>>>>>> gir-html-css
-  
-  .github-text {
-    margin-right: 1rem;
-    font-size: 1rem;
-    color: rgb(0, 0, 0);
-  }
-  .github-logo {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-  }
+    height: 300px;
+    width: 400px;
+}
+
+.projects a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.education {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+  line-height: 50px;
+}
+
+.languages {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+}
+
+.languages p {
+  padding-left: 50px;
+}
+   
+.contacts {
+  color: #fff;
+  font-size: 24px;
+  padding: 0 100px;
+  line-height: 50px;
+}
+
+.footer {
+  grid-area: footer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #00000059;
+}
+
+.ref {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.footer_year {
+  font-size: medium;
+  color: rgb(255, 255, 255);
+}
+
+.rsschool-logo {
+  width: 100px;
+  height: 100px;
+  filter: invert(1);
+}
+
+.footer_logo a {
+  display: inline-block;
+  text-decoration: none;
+  justify-content: space-around;
+  padding: 5px;
+} 
+
+.discord img,
+.telegram img,
+.github img {
+  width: 32px;
+  filter: invert(1);
+}
