fix: fixed by validator

--- a/css/style.css
+++ b/css/style.css
@@ -59,14 +59,14 @@ h1 {
   padding-left: 200px;
 }
 
-.main p{
+.bio p{
   color: #fff;
   font-size: 24px;
   padding: 100px 200px;
   line-height: 50px;
 }
 
-.main div {
+.bio div {
   height: 400px;
 }
 
