--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,23 @@
-html {
-  font-family: 'Inconsolata', monospace;
-  font-weight: 400;
+:root {
+  --text-color: #3d3d3d;
+  --text-font: 'Inconsolata', monospace;
 }
 
+html,
 body {
-  max-width: 1280px;
+  font-family: var(--text-font);
+  font-weight: 400;
   margin: 0 auto;
-  background-color: rgb(0, 0, 0);
+  padding: 0 auto;
 }
 
-nav {
+.container1 {
+  max-width: 1440px;
   margin: 0 auto;
 }
 
 .menu ul {
-  padding-left: 100px;
+  padding: 10px 100px;
 }
 
 .menu li {
@@ -22,14 +25,14 @@ nav {
   display: inline;
   justify-content: space-around;
   align-content: center;
-  margin: 0 auto;
   padding-left: 20px;
+  padding-right: 20px;
   font-size: 24px;
 }
 
 .menu a {
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: var(--text-color);
   padding: 20px;
 }
 
@@ -50,10 +53,9 @@ nav {
 }
 
 header {
-  width: 1280px;
+  width: 1440px;
   height: 600px;
   display: inline-flexbox;
-  background-image: url('../img/cv-photo.png');
   background-repeat: no-repeat;
   background-size: auto;
   background-position: right;
@@ -61,51 +63,57 @@ header {
 
 h1 {
   width: 100vw;
-  color: rgb(255, 255, 255);
+  color: var(--text-color);
   font-size: 60px;
   margin: 0 auto;
   padding-top: 150px;
-  padding-left: 100px;
+  padding-left: 150px;
 }
 
 .position {
   height: 400px;
-  color: #fff;
+  color: var(--text-color);
   font-size: 34px;
   padding-left: 200px;
 }
 
+.cv-photo {
+  display: flex;
+  float: right;
+  padding-right: 200px;
+}
+
 .bio p{
-  color: #fff;
+  color:var(--text-color);
   font-size: 24px;
   padding: 100px 200px;
   line-height: 50px;
 }
 
 .bio div {
-  height: 400px;
+  height: 100%;
 }
 
 .skills {
-  color: #fff;
+  color: var(--text-color);
   font-size: 24px;
   padding: 0 100px;
 }
 
 .code-example {
-  color: #fff;
+  color: var(--text-color);
   font-size: 24px;
   padding: 0 100px;
 }
 
 pre {
-  font: 1em sans-serif rgb(255, 255, 255);
-  background-color: rgba(34, 34, 34, 0.774);
+  font: 1em sans-serif rgb(82, 79, 79);
+  background-color: rgba(255, 255, 255, 0.774);
   width: 1100px;
 }
 
 .projects {
-  color: #fff;
+  color: var(--text-color);
   font-size: 24px;
   padding: 0 100px;
 }
@@ -124,18 +132,18 @@ pre {
 
 .projects a {
   text-decoration: none;
-  color: #fff;
+  color: var(--text-color);
 }
 
 .education {
-  color: #fff;
+  color: var(--text-color);
   font-size: 24px;
   padding: 0 100px;
   line-height: 50px;
 }
 
 .languages {
-  color: #fff;
+  color: var(--text-color);
   font-size: 24px;
   padding: 0 100px;
 }
@@ -145,19 +153,18 @@ pre {
 }
    
 .contacts {
-  color: #fff;
+  color: var(--text-color);
   font-size: 24px;
   padding: 0 100px;
   line-height: 50px;
 }
 
 .footer {
-  grid-area: footer;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
-  background-color: #00000059;
+  padding: 10px 100px;
+  background-color: #000000d2;
 }
 
 .ref {
