--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,17 @@ h1 {
 }
 
 .skills {
+  text-align: center;
   color: var(--text-color);
   font-size: 24px;
-  padding: 0 100px;
+}
+
+.skills-container div {
+  display: inline-block;
+}
+
+.skills-icons {
+  width: 150px;
 }
 
 .code-example {
