--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,9 @@ body {
 }
 
 .menu a:hover {
-  color: rgba(255, 0, 200, 0.76);
+  color: rgba(180, 105, 164, 0.76);
   transition: 0.3s;
-  text-shadow: 2px 2px 3px rgb(255, 0, 170), 0 0 2em rgb(0, 247, 255), 0 0 0.5em blue;
+  text-shadow: 2px 2px 3px rgb(136, 32, 101), 0 0 2em rgb(0, 0, 0), 0 0 0.5em rgb(233, 32, 132);
   animation: light 1.5s linear infinite alternate;
 }
 
@@ -186,6 +186,12 @@ pre {
   font-size: 24px;
   padding: 0 100px;
   line-height: 50px;
+  height: 700px;
+  width: 1200px;
+}
+
+.map {
+  float: right;
 }
 
 .footer {
