--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 .position {
-  height: 400px;
+  height: 200px;
   color: var(--text-color);
   font-size: 34px;
   padding-left: 200px;
@@ -97,7 +97,6 @@ h1 {
 
 h2 {
   text-align: center;
-  margin-bottom: 50px;
 }
 
 .skills {
@@ -113,6 +112,8 @@ h2 {
   justify-content: center;
   width: 100%;
   gap: 20px;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 .skills-item {
